Bug 1147817 - Part 1: Add RegExpInitialize. r=till